# exec-ecs-ui

./: .gitignore  README.md  nuxt.config.ts  package.json
.cursor/rules/: all.mdc  backend.mdc  coding-practices.mdc  common-patterns.mdc  file-structure.mdc  frontend.mdc  package-manager.mdc
.github/workflows/: release.yml
app/: app.config.ts
app/assets/css/: main.css
app/components/: CommonHeader.vue
app/layouts/: default.vue
app/pages/: browse.vue  console.vue  history.vue  index.vue  settings.vue
app/plugins/: history.client.js  settings.client.js  xterm.client.js
app/stores/: aws.js  history.js  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: aws.rs  lib.rs  main.rs  terminal.rs
